Added all images

--- a/cs180/proj2/index.html
+++ b/cs180/proj2/index.html
@@ -513,6 +513,32 @@
           </td>
         </tr>
       </table>
+      <br>
+      I created another irregular mask where I changed Mona Lisa's background with a post-apocalyptic view. I wanted to see how well the blending would work with a mask that was not a perfect circle. Here are the results:
+      <table>
+        <tr align="center">
+          <td>
+            <img src="./Images/MonaApocalypse/mona.jpeg" align="middle" width="300px"/>
+            <figcaption>Mona Image</figcaption>
+          </td>
+          <td>
+            <img src="./Images/MonaApocalypse/apocalypse.jpeg" align="middle" width="300px"/>
+            <figcaption>Apocalypse Background Image</figcaption>
+          </td>
+          <td>
+            <img src="./Images/MonaApocalypse/mona-mask.jpg" align="middle" width="300px">
+            <figcaption>Mask</figcaption>
+          </td>
+        </tr>
+      </table>
+      <table>
+        <tr align="center">
+          <td>
+            <img src="./Images/MonaApocalypse/mona-apocalypse-blended.png" align="middle" />
+            <figcaption>Mona Apocalypse Blended Image</figcaption>
+          </td>
+        </tr>
+      </table>
     </div>
   </div>
 </body>
